--- a/2d-raycasting/styles.css
+++ b/2d-raycasting/styles.css
@@ -4,6 +4,7 @@ body {
   height: 100vh;
   background-color: #000000;
   color: #c2c2c2;
+  overflow: hidden;
 }
 
 a {
@@ -16,9 +17,6 @@ a {
 }
 
 canvas#canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
 }
